--- a/index.html
+++ b/index.html
@@ -9,57 +9,82 @@
   </head>
   <body>
     <header
-      class="flex justify-between w-full max-w-[1024px] h-10 px-[33px] md:px-[42px] mr-auto ml-auto mt-[30px] mb-[30px] items-center"
+      class="flex flex-col items-center gap-2 w-full max-w-screen py-[33px] px-[33px] md:px-[42px] mx-0"
     >
-      <nav class="relative w-[50px] flex items-center md:hidden">
-        <button class="menu-btn">
+      <div class="flex justify-between w-full max-w-[940px]">
+        <button class="menu-btn md:hidden">
           <img
             class="w-[24px] hover:cursor-pointer hover:scale-150"
             src="./images/baseline-menu.svg"
             alt="漢堡選單"
           />
         </button>
-        <ul class="menu-list hidden absolute z-2 top-6 w-full border bg-white  border-[#3F5D45] text-[#3F5D45] text-center">
-          <li class="">
-            <a class="block w-full hover:bg-[#FFE180] active:[#FFE180]" href="index.html">首頁</a>
+
+        <a href="index.html">
+          <picture class="h-[17.74px] items-center justify-center md:h-10">
+            <source
+              media="(max-width:768px)"
+              srcset="./images/logotype-lg-dark.svg"
+            />
+            <img
+              class="h-[17.74px] md:h-10"
+              src="./images/logo-all-dark.svg"
+              alt="品牌Logo"
+            />
+          </picture>
+        </a>
+
+        <nav class="max-w-[300px] flex justify-between gap-[79px] items-center">
+          <ul class="w-[215px] hidden md:flex justify-between items-center">
+            <li class="navbar-btn">
+              <a href="index.html">首頁</a>
+            </li>
+            <li class="navbar-btn">
+              <a href="product.html">甜點</a>
+            </li>
+            <li class="navbar-btn">
+              <a href="login.html">登入</a>
+            </li>
+          </ul>
+          <div class="w-[24px]">
+            <a href="cart.html"
+              ><img
+                class="hover:scale-150"
+                src="./images/shopping-cart.svg"
+                alt="前往購物車"
+            /></a>
+          </div>
+        </nav>
+      </div>
+      
+      <div class="w-full max-w-[940px] md:hidden">
+        <ul
+          class="hidden text-[#3F5D45] text-center leading-10 font-semibold"
+          id="menu-list"
+        >
+          <li>
+            <a
+              class="block w-full hover:bg-[#FFE180] active:bg-[#fac517]"
+              href="index.html"
+              >首頁</a
+            >
           </li>
           <li class="">
-            <a class="block w-full hover:bg-[#FFE180] active:[#FFE180]" href="product.html">甜點</a>
+            <a
+              class="block w-full hover:bg-[#FFE180] active:bg-[#fac517]"
+              href="product.html"
+              >甜點</a
+            >
           </li>
           <li class="">
-            <a class="block w-full hover:bg-[#FFE180] active:[#FFE180]" href="login.html">登入</a>
+            <a
+              class="block w-full hover:bg-[#FFE180] active:bg-[#fac517]"
+              href="login.html"
+              >登入</a
+            >
           </li>
         </ul>
-      </nav>
-
-      <a href="index.html">
-        <picture class="h-[17.74px] items-center justify-center md:h-10 ">
-          <source
-            media="(max-width:768px)"
-            srcset="./images/logotype-lg-dark.svg"
-          />
-          <img class="h-[17.74px] md:h-10" src="./images/logo-all-dark.svg" alt="品牌Logo" />
-        </picture>
-      </a>
-
-      <nav class="max-w-[300px] flex justify-between gap-[79px] items-center">
-        <ul class="w-[215px] hidden md:flex justify-between items-center">
-          <li class="navbar-btn">
-            <a href="index.html">首頁</a>
-          </li>
-          <li class="navbar-btn">
-            <a href="product.html">甜點</a>
-          </li>
-          <li class="navbar-btn">
-            <a href="login.html">登入</a>
-          </li>
-        </ul>
-        <div class="w-[24px]">
-          <a href="cart.html"
-            ><img class="hover:scale-150" src="./images/shopping-cart.svg" alt="前往購物車"
-          /></a>
-        </div>
-      </nav>
+      </div>
     </header>
 
     <main>
@@ -192,8 +217,8 @@
             <div class="w-[315px] leading-8 text-[#8DA291]">
               <p>
                 青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
-                <br>
-                <br>
+                <br />
+                <br />
                 是非成敗轉頭空，青山依舊在，幾度夕陽紅。白髮漁樵江渚上，古今多少事，都付笑談中。
               </p>
             </div>
@@ -215,8 +240,8 @@
             <div class="w-[315px] leading-8 text-[#8DA291]">
               <p>
                 青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
-                <br>
-                <br>
+                <br />
+                <br />
                 是非成敗轉頭空，青山依舊在，幾度夕陽紅。白髮漁樵江渚上，古今多少事，都付笑談中。
               </p>
             </div>
@@ -232,8 +257,7 @@
         </section>
       </article>
 
-
-      <section class="mb-[60px] ">
+      <section class="mb-[60px]">
         <ul class="justify-between max-w-[940px] mx-auto md:flex hidden">
           <li class="w-[32%] max-w-[300px]">
             <figure class="relative">
@@ -302,7 +326,9 @@
           </li>
         </ul>
         <!-- 行動版 -->
-        <ul class=" flex mt-[30px] w-[315px] mx-auto overflow-x-auto overflow-y-hidden gap-4 snap-x snap-mandatory scroll-smooth [scrollbar-width:none] md:hidden">
+        <ul
+          class="flex mt-[30px] w-[315px] mx-auto overflow-x-auto overflow-y-hidden gap-4 snap-x snap-mandatory scroll-smooth [scrollbar-width:none] md:hidden"
+        >
           <li class="w-[315px] shrink-0 snap-start">
             <figure class="relative">
               <div class="label absolute z-10 left-5">
@@ -347,7 +373,7 @@
             <button class="lg-btn w-full">加入購物車</button>
           </li>
 
-           <li class="w-[315px] shrink-0 snap-start">
+          <li class="w-[315px] shrink-0 snap-start">
             <figure class="relative">
               <div class="label absolute z-10 left-5">
                 <span>本日精選</span>
@@ -369,7 +395,7 @@
             <button class="lg-btn w-full">加入購物車</button>
           </li>
 
-           <li class="w-[315px] shrink-0 snap-start">
+          <li class="w-[315px] shrink-0 snap-start">
             <figure class="relative">
               <div class="label absolute z-10 left-5">
                 <span>本日精選</span>
@@ -391,7 +417,7 @@
             <button class="lg-btn w-full">加入購物車</button>
           </li>
 
-           <li class="w-[315px] shrink-0 snap-start">
+          <li class="w-[315px] shrink-0 snap-start">
             <figure class="relative">
               <div class="label absolute z-10 left-5">
                 <span>本日精選</span>
@@ -413,7 +439,7 @@
             <button class="lg-btn w-full">加入購物車</button>
           </li>
 
-           <li class="w-[315px] shrink-0 snap-start">
+          <li class="w-[315px] shrink-0 snap-start">
             <figure class="relative">
               <div class="label absolute z-10 left-5">
                 <span>本日精選</span>
@@ -435,7 +461,7 @@
             <button class="lg-btn w-full">加入購物車</button>
           </li>
 
-           <li class="w-[315px] shrink-0 snap-start">
+          <li class="w-[315px] shrink-0 snap-start">
             <figure class="relative">
               <div class="label absolute z-10 left-5">
                 <span>本日精選</span>
@@ -456,9 +482,7 @@
             </figcaption>
             <button class="lg-btn w-full">加入購物車</button>
           </li>
-
         </ul>
-
       </section>
     </main>
 
@@ -544,7 +568,6 @@
         </div>
       </section>
     </footer>
-
 
     <script src="./js/all.js"></script>
     <script src="./js/header.js"></script>
