--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
         </nav>
       </div>
-      
+
       <div class="w-full max-w-[940px] md:hidden">
         <ul
           class="hidden text-[#3F5D45] text-center leading-10 font-semibold"
@@ -98,36 +98,40 @@
         </picture>
         <ul
           class="w-full max-w-[781px] h-[256px] flex items-center justify-between text-center mx-auto z-1 text-white text-2xl font-light tracking-widest max-md:text-[20px] md:-mt-[89px]"
+          id="series-select"
         >
           <li
             class="w-[33.3%] max-w-[259.67px] h-full bg-cover bg-center [writing-mode:vertical-rl]"
             style="background-image: url('https://bit.ly/2R5tqwD')"
           >
-            <a
-              class="flex justify-center items-center w-full h-full bg-[#3F5D45]/80 backdrop-blur-[5px] hover:bg-[#FFE180]/80 hover:font-semibold hover:text-[#3F5D45] active:[#FFE180]/80 active:font-semibold active:text-[#3F5D45]"
-              href="#"
-              >本日精選</a
+            <button
+              class="flex justify-center items-center w-full h-full bg-[#3F5D45]/80 backdrop-blur-[5px] cursor-pointer hover:duration-700 hover:bg-[#FFE180]/80 hover:font-semibold hover:text-[#3F5D45] [&.active]:bg-[#FFE180]/80 [&.active]:font-semibold [&.active]:text-[#3F5D45]"
+              value="本日精選"
             >
+              本日精選
+            </button>
           </li>
           <li
             class="w-[33.4%] h-full bg-cover bg-center [writing-mode:vertical-rl]"
             style="background-image: url('https://bit.ly/2Dwoxd7')"
           >
-            <a
-              class="flex justify-center items-center w-full h-full border-y bg-[#3F5D45]/80 backdrop-blur-[5px] hover:bg-[#FFE180]/80 hover:font-semibold hover:text-[#3F5D45]"
-              href="#"
-              >人氣推薦</a
+            <button
+              class="flex justify-center items-center w-full h-full border-y bg-[#3F5D45]/80 backdrop-blur-[5px] cursor-pointer hover:duration-700 hover:bg-[#FFE180]/80 hover:font-semibold hover:text-[#3F5D45] [&.active]:bg-[#FFE180]/80 [&.active]:font-semibold [&.active]:text-[#3F5D45]"
+              value="人氣推薦"
             >
+              人氣推薦
+            </button>
           </li>
           <li
             class="w-[33.3%] max-w-[259.67px] h-full bg-cover bg-center [writing-mode:vertical-rl]"
             style="background-image: url('https://bit.ly/2OUteif')"
           >
-            <a
-              class="flex items-center justify-center w-full h-full bg-[#3F5D45]/80 backdrop-blur-[5px] hover:bg-[#FFE180]/80 hover:font-semibold hover:text-[#3F5D45]"
-              href="#"
-              >新品上市</a
+            <button
+              class="flex items-center justify-center w-full h-full bg-[#3F5D45]/80 backdrop-blur-[5px] cursor-pointer hover:duration-700 hover:bg-[#FFE180]/80 hover:font-semibold hover:text-[#3F5D45] [&.active]:bg-[#FFE180]/80 [&.active]:font-semibold [&.active]:text-[#3F5D45]"
+              value="新品上市"
             >
+              新品上市
+            </button>
           </li>
         </ul>
       </section>
@@ -258,76 +262,15 @@
       </article>
 
       <section class="mb-[60px]">
-        <ul class="justify-between max-w-[940px] mx-auto md:flex hidden">
-          <li class="w-[32%] max-w-[300px]">
-            <figure class="relative">
-              <div class="label absolute z-10 left-5">
-                <span>本日精選</span>
-              </div>
-              <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer w-5"
-                src="./images/baseline-favorite-border-empty.svg"
-                alt="加入我的收藏"
-              />
-              <img
-                class="h-[315px] w-full object-cover"
-                src="https://bit.ly/2zBjQuq"
-              />
-            </figure>
-            <figcaption class="flex">
-              <p class="product-name">焦糖馬卡龍</p>
-              <p class="product-price">NT$450</p>
-            </figcaption>
-            <button class="lg-btn w-full">加入購物車</button>
-          </li>
-
-          <li class="w-[32%] max-w-[300px] h-full">
-            <figure class="relative">
-              <div class="label absolute z-10 left-5">
-                <span>本日精選</span>
-              </div>
-              <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer w-5"
-                src="./images/baseline-favorite-border-empty.svg"
-                alt="加入我的收藏"
-              />
-              <img
-                class="h-[315px] w-full object-cover"
-                src="https://bit.ly/2zBDAxX"
-              />
-            </figure>
-            <figcaption class="flex">
-              <p class="product-name">焦糖馬卡龍</p>
-              <p class="product-price">NT$450</p>
-            </figcaption>
-            <button class="lg-btn w-full">加入購物車</button>
-          </li>
-
-          <li class="w-[32%] max-w-[300px]">
-            <figure class="relative">
-              <div class="label absolute z-10 left-5">
-                <span>本日精選</span>
-              </div>
-              <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer w-5"
-                src="./images/baseline-favorite-border-empty.svg"
-                alt="加入我的收藏"
-              />
-              <img
-                class="h-[315px] w-full object-cover"
-                src="https://bit.ly/2QbVsVR"
-              />
-            </figure>
-            <figcaption class="flex">
-              <p class="product-name">焦糖馬卡龍</p>
-              <p class="product-price">NT$450</p>
-            </figcaption>
-            <button class="lg-btn w-full">加入購物車</button>
-          </li>
-        </ul>
-        <!-- 行動版 -->
         <ul
-          class="flex mt-[30px] w-[315px] mx-auto overflow-x-auto overflow-y-hidden gap-4 snap-x snap-mandatory scroll-smooth [scrollbar-width:none] md:hidden"
+          class="product-list-web justify-between max-w-[940px] mx-auto flex max-[769px]:hidden"
+        >
+          <!-- 根據點選的系列渲染商品 -->
+        </ul>
+
+        <!-- 行動版商品區塊 -->
+        <ul
+          class="product-list-mobile flex mt-[30px] w-[315px] mx-auto overflow-x-auto overflow-y-hidden gap-4 snap-x snap-mandatory scroll-smooth [scrollbar-width:none] md:hidden"
         >
           <li class="w-[315px] shrink-0 snap-start">
             <figure class="relative">
@@ -335,8 +278,8 @@
                 <span>本日精選</span>
               </div>
               <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/favorite_border.png"
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer w-5"
+                src="./images/baseline-favorite-border-empty.svg"
                 alt="加入我的收藏"
               />
               <img
@@ -357,8 +300,8 @@
                 <span>本日精選</span>
               </div>
               <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/favorite_border.png"
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer w-5"
+                src="./images/baseline-favorite-border-empty.svg"
                 alt="加入我的收藏"
               />
               <img
@@ -379,96 +322,8 @@
                 <span>本日精選</span>
               </div>
               <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/favorite_border.png"
-                alt="加入我的收藏"
-              />
-              <img
-                class="h-[315px] w-full object-cover"
-                src="https://bit.ly/2zBjQuq"
-              />
-            </figure>
-            <figcaption class="flex">
-              <p class="product-name">焦糖馬卡龍</p>
-              <p class="product-price">NT$450</p>
-            </figcaption>
-            <button class="lg-btn w-full">加入購物車</button>
-          </li>
-
-          <li class="w-[315px] shrink-0 snap-start">
-            <figure class="relative">
-              <div class="label absolute z-10 left-5">
-                <span>本日精選</span>
-              </div>
-              <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/favorite_border.png"
-                alt="加入我的收藏"
-              />
-              <img
-                class="h-[315px] w-full object-cover"
-                src="https://bit.ly/2zBjQuq"
-              />
-            </figure>
-            <figcaption class="flex">
-              <p class="product-name">焦糖馬卡龍</p>
-              <p class="product-price">NT$450</p>
-            </figcaption>
-            <button class="lg-btn w-full">加入購物車</button>
-          </li>
-
-          <li class="w-[315px] shrink-0 snap-start">
-            <figure class="relative">
-              <div class="label absolute z-10 left-5">
-                <span>本日精選</span>
-              </div>
-              <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/baseline-favorite.svg"
-                alt="加入我的收藏"
-              />
-              <img
-                class="h-[315px] w-full object-cover"
-                src="https://bit.ly/2zBjQuq"
-              />
-            </figure>
-            <figcaption class="flex">
-              <p class="product-name">焦糖馬卡龍</p>
-              <p class="product-price">NT$450</p>
-            </figcaption>
-            <button class="lg-btn w-full">加入購物車</button>
-          </li>
-
-          <li class="w-[315px] shrink-0 snap-start">
-            <figure class="relative">
-              <div class="label absolute z-10 left-5">
-                <span>本日精選</span>
-              </div>
-              <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/baseline-favorite.svg"
-                alt="加入我的收藏"
-              />
-              <img
-                class="h-[315px] w-full object-cover"
-                src="https://bit.ly/2zBjQuq"
-              />
-            </figure>
-            <figcaption class="flex">
-              <p class="product-name">焦糖馬卡龍</p>
-              <p class="product-price">NT$450</p>
-            </figcaption>
-            <button class="lg-btn w-full">加入購物車</button>
-          </li>
-
-          <li class="w-[315px] shrink-0 snap-start">
-            <figure class="relative">
-              <div class="label absolute z-10 left-5">
-                <span>本日精選</span>
-              </div>
-              <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/baseline-favorite.svg"
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer w-5"
+                src="./images/baseline-favorite-border-empty.svg"
                 alt="加入我的收藏"
               />
               <img
@@ -569,7 +424,7 @@
       </section>
     </footer>
 
-    <script src="./js/all.js"></script>
+    <script src="./js/home.js" type="module"></script>
     <script src="./js/header.js"></script>
   </body>
 </html>
